# kuro-conf

./: CMakeLists.txt  NOTICE  README.md  install.sh
automated/: build_and_run.sh
src/: gh.h  kuro_conf.h  main.c  main.h
tests/: KUROX64 copy.EFI  KUROX64.EFI  kuro.conf  kuro.pub
